# ljh

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml
cmake/: Qt.cmake
include/ljh/: bitmask_operators.hpp  byte_constant.hpp  case_insensitive_string.hpp  casting.hpp  channel.hpp  char_convertions.hpp  char_traits.hpp  checked_math.hpp  color.hpp  compile_time_string.hpp  concepts.hpp  coroutine.hpp  cpp_version.hpp  defer.hpp  delay_loaded_functions.hpp  enum_array.hpp  expected.hpp  fixed_point.hpp  function_pointer.hpp  function_traits.hpp  generator.hpp  get_index.hpp  int_types.hpp  memory_mapped_file.hpp  named_mutex.hpp  os_build_info.hpp  overload.hpp  static_cast_underlying.hpp  string.hpp  string_utils.hpp  string_view.hpp  system_directories.hpp  system_info.hpp  thread_name.hpp  token_bucket.hpp  type_traits.hpp  typename.hpp  unreachable.hpp  version.hpp
include/ljh/_i_internal/: helpers.hpp  string.hpp  string_view.hpp
include/ljh/area/: point.hpp  rect.hpp  region.hpp  size.hpp  tagged_rect.hpp
include/ljh/coroutine/: cold_task.hpp  com_aware_task.hpp  coroutine_headers.hpp  fire_and_forget.hpp  invoke_lambda.hpp  node_list.hpp  promise.hpp  shared_mutex.hpp  state.hpp  task.hpp  task_base.hpp  task_policies.hpp  wait_for.hpp  winrt_task.hpp
include/ljh/format/: ranges.hpp
include/ljh/ranges/: actions.hpp  bind_back.hpp  elements_of.hpp  range_adaptor_closure.hpp  terminators.hpp  utility.hpp  views.hpp
include/ljh/smarc/: control_block.hpp  fwd.hpp  list.hpp  node.hpp  ptr.hpp  ref.hpp
include/ljh/unix/: dbus.hpp
include/ljh/windows/: UTF-8.hpp  com_bstr.hpp  com_safe_array.hpp  com_variant.hpp  console.hpp  lcid.hpp  registry.hpp  undocumented.hpp  winrt_help.hpp  wmi.hpp
include/ljh/winrt/: members.hpp  unboxing.hpp
modules/: coroutine.ixx  main.ixx  math.ixx  os.ixx  smarc.ixx  string.ixx
source/: dummy_system_info.cpp  function_pointer.cpp  main.cpp  memory_mapped_file.cpp  os_versions.cpp  system_directories.cpp  system_info.cpp  system_info.mm
source/android/: system_info.cpp
source/macos/: system_info.mm  thread_name.cpp
source/unix/: dbus.cpp  named_mutex.cpp  system_info.cpp  thread_name.cpp
source/windows/: named_mutex.cpp  registry.cpp  system_info.cpp  thread_name.cpp  wmi.cpp
source/windows/checked_math/: arm64.asm
tests/: CMakeLists.txt  catch.cpp  char_convertions.14.cpp  checked_math.20.cpp  cmake.__cpp_explicit_this_parameter.cpp  cmake.cppwinrt_await.cpp  cmake.modules_support.ixx  compile_time_string.14.cpp  compile_time_string.20.cpp  concepts.20.cpp  coroutine.20.cpp  dbus.17.cpp  dbus.20.cpp  defer.11.cpp  delay_loaded_functions.20.cpp  enum_array.17.cpp  expected.17.cpp  expected.20.cpp  function_pointer.11.cpp  function_pointer.17.cpp  function_traits.na.cpp  generator.20.cpp  info.na.cpp  memory_mapped_file.17.cpp  module.20.cpp  module.23.cpp  point.20.cpp  point.23.cpp  ranges.20.cpp  rect.20.cpp  rect.23.cpp  region.23.cpp  size.20.cpp  size.23.cpp  smarc.23.cpp  string.na.cpp  string_utils.11.cpp  system_directories.98.cpp  system_info.17.cpp  version.17.cpp  (+1 more)
